--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.36.3",
     "@clerk/nextjs": "^6.11.0",
+    "@emailjs/browser": "^4.4.1",
     "@google/generative-ai": "^0.21.0",
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "aos": "^2.3.4",
